feat: add html structure

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <h2 id="question" class="question-header">
         What is 1 multiply 2?
       </h2>
+      <input type="text" class="input-form" id="input-data" placeholder="Enter your answer" autofocus autocomplete="off">
+      <button type="submit" class="btn-form" id="sunmit-button">Submit</button>
     </form>
   </div>
 
