feat: add style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Multiplication</title>
 </head>
 <body>
-  <div class="multyply-wrapper">
+  <div class="multiply-wrapper">
     <h1 class="main-header">
       Train in multiply!
     </h1>
