--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     </h1>
     <form action="" class="form" id="form">
       <h4 class="score-header" id="score">
-        score: 4
+
       </h4>
       <h2 id="question" class="question-header">
-        What is 1 multiply 2?
+
       </h2>
       <input type="text" class="input-form" id="input-data" placeholder="Enter your answer" autofocus autocomplete="off">
-      <button type="submit" class="btn-form" id="sunmit-button">Submit</button>
+      <button type="submit" class="btn-form" id="submit-button">Submit</button>
     </form>
   </div>
-
+  <script src="index.js"></script>
 </body>
 </html>
